+ fixed a bunch of the responsive css stuff.   improvements needed. please re-test at all sizes   and pay particular attention to how images resize and align. + added improved padding for responsive stuff. + added justified text.

--- a/css/style.css
+++ b/css/style.css
@@ -198,24 +198,29 @@ KICKSTARTER HIDE + SHOW CSS - END
 }
 .slideshow > div
 { 
-  position: absolute; 
+  position: absolute; /* yup! */
   padding: 0;
   margin: 0 auto;
   overflow: visible;
-  max-width: 680px;
-  width: 100%;
-  height: 350px;
+  /*max-width: 680px;*/
+  max-width: 100%;
+  height: 100%;
+  width: inherit;
+
 }
 .slideshow img 
 { 
   position: absolute;
-  top:0;
-  /*display: none;*/
+  /*margin: 0 auto;*/
+  margin: auto;
   visibility: hidden;
-  float: left;
-  max-width: 680px !important;
-  width: 100%;
-  display: inline-block;
+  /*max-width: 680px !important;*/
+  max-width: 100%; /* !important;*/
+  width: auto;
+  /*height: 100%;*/
+  height: auto;
+  display: inline;
+  vertical-align: middle;
 }
 
 .slideshow span {
@@ -224,28 +229,20 @@ KICKSTARTER HIDE + SHOW CSS - END
   display: inline-block;
   text-align: center;
   margin: 0 auto;
-  margin-top: -631px;/*hack - SLIDESHOW TEXT*/
   width: 100px; /* has to be the same as #service */
 }
 
-#serviceTagline span {
-  position: relative;
-  margin: 0 auto;
-  width: 100px;
-}
 #service {
   display: inline-block;
   width: 100px;
-  height: 20px;
-  margin: 0 5px;
-  top: 0;
+  margin: 0px 5px;
 }
 
-#subtitle{
+/*#subtitle{
   margin-top: -20px;
   line-height: 1.8em;
 }
-
+*/
 .faq_question{
   font-size: 2em;
   line-height: 0;
@@ -422,9 +419,9 @@ a:hover {
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
-  padding-right: 15px;
-  padding-left: 15px;
-  overflow: visible;   /* <! GREG CHANGED THIS TO FIX SLIDE SHOW! */
+  padding-right: 40px;
+  padding-left: 40px;
+  overflow: visible;
   padding-top: 3em;
   padding-bottom: 3em;
   -webkit-transition: -webkit-transform 1s, opacity 1s;
@@ -966,42 +963,6 @@ input[type=submit], textarea {
   -o-transition: all .2s ease-in-out;
 }
 
-/*! http://responsiveslides.com v1.54 by @viljamis */
-
-.rslides {
-  position: relative;
-  list-style: none;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  }
-
-.rslides li {
-  -webkit-backface-visibility: hidden;
-  position: absolute;
-  display: none;
-  width: 100%;
-  padding-bottom: 30px;
-  left: 0;
-  top: 0;
-  }
-
-.rslides li:first-child {
-  position: relative;
-  display: block;
-  margin:0 auto;  
-  }
-
-.rslides img {
-  display: block;
-  max-height: 300px;
-  height: auto;
-  margin:0 auto;  
-  max-width:600px;
-    width: auto;
-  border: 0;
-  }
-
   #coming_soon{
     margin-top: 1em;
     padding-bottom: 2em;
@@ -1044,6 +1005,10 @@ input[type=submit], textarea {
 
 .group:after {
   clear:both;
+}
+
+.justified {
+  text-align: justify;
 }
 
 @media only screen and (min-width:480px) {
@@ -1095,6 +1060,10 @@ input[type=submit], textarea {
   margin: 0 auto;
   padding-bottom: 0;
 }
+.cbp-so-side {
+  padding-right: 15px;
+  padding-left: 15px;
+}
 .cbp-so-side-left {
   width: 100%;
   max-width: 1000px;
@@ -1137,18 +1106,9 @@ input[type=submit], textarea {
     padding-left: 15px;
     padding-right: 15px;
 }
-.slideshow{
-  height: 350px;
-}
-.slideshow span {
-  position: absolute;
-  visibility: hidden;
-  display: inline-block;
-  text-align: center;
-  margin: 0 auto;
-  margin-top: -625px;/*Tablet hack - SLIDESHOW TEXT - iPad*/
-  width: 100px; /* has to be the same as #service */
-}
+.slideshow{height: 350px !important; }
+.slideshow img {max-height: 350px !important; }
+
 
 }
 
@@ -1166,16 +1126,6 @@ input[type=submit], textarea {
     margin: 0 auto;
     text-align: center;
 }
-
-  .rslides img {
-  display: block;
-  max-height: 150px;
-  height: auto;
-  margin:0 auto;  
-  max-width:100%;
-    width: auto;
-  border: 0;
-  }
 
   input{
     max-width: 200px;
@@ -1197,36 +1147,16 @@ h3{
 #more{
   margin-top: -1.5em;
 }
-.slideshow{
-  height: 150px;
-}
-
+.slideshow{height: 150px !important; }
+.slideshow img {max-height: 150px !important; }
 
 .slideshow span {
-  position: absolute;
-  visibility: hidden;
-  display: inline-block;
-  text-align: center;
-  margin: 0 auto;
   width: 88px; /* has to be the same as #service */
-    margin-top: -461px;/*iPhone hack - SLIDESHOW TEXT*/
-}
-#serviceTagline span {
-  position: relative;
-  margin: 0 auto;
-  width: 88px;
 }
 #service {
-  display: inline-block;
   width: 88px;
-  height: 20px;
-  margin: 0 5px;
 }
 
-#subtitle{
-  margin-top: -20px;
-  line-height: 1.8em;
-}
 .link{
   font-size: .7em;
   margin-right: 5px;
